# PLD

./: CMakeLists.txt  README.md  build_emscripten.sh  index.html  index.js
UDC/include/UDC/: UDC_chart.h  UDC_dsc.h  UDC_note.h  UDC_phb.h  UDC_ppd.h
UDC/src/: UDC_chart.c  UDC_dsc.c  UDC_note.c  UDC_phb.c  UDC_ppd.c
UI/src/: UI_animation.c  UI_choice.c  UI_popup.c  UI_utils.c
include/: PLD.h  PLDControl.h  PLDCore.h  PLDDSCLoad.h  PLDEvaluate.h  PLDHolds.h  PLDMenu.h  PLDNotes.h  PLDPPDLoad.h  PLDPause.h  PLDResult.h  PLDSongMenu.h  PLDUtils.h  PLDVideo.h  PLD_array_list.h  PLD_context.h  PLD_effect.h  PLD_image.h  PLD_sound.h  PLD_start_menu.h  PLD_text.h  PLD_utils.h
include/PLD/: PLD.h  PLD_context.h  PLD_control.h  PLD_core.h  PLD_dsc.h  PLD_effect.h  PLD_evaluate.h  PLD_hold.h  PLD_image.h  PLD_menu.h  PLD_note.h  PLD_pause.h  PLD_ppd.h  PLD_result.h  PLD_song_menu.h  PLD_sound.h  PLD_start_menu.h  PLD_text.h  PLD_utils.h  PLD_video.h
include/UI/: UI_choice.h
src/: PLD.c  PLDControl.c  PLDCore.c  PLDDSCLoad.c  PLDEvaluate.c  PLDHolds.c  PLDMenu.c  PLDNotes.c  PLDPPDLoad.c  PLDPause.c  PLDResult.c  PLDSongMenu.c  PLDUtils.c  PLD_array_list.c  PLD_context.c  PLD_control.c  PLD_core.c  PLD_dsc.c  PLD_effect.c  PLD_evaluate.c  PLD_hold.c  PLD_image.c  PLD_menu.c  PLD_note.c  PLD_pause.c  PLD_ppd.c  PLD_result.c  PLD_song_menu.c  PLD_sound.c  PLD_start_menu.c  PLD_text.c  PLD_utils.c  PLD_video.c  PLD_video_ffmpeg.c  PLD_video_plmpeg.c  PLDffmpeg.c.old
src/UI/: UI_animation.c  UI_choice.c  UI_choice.h  UI_popup.c  UI_popup.h  UI_utils.c  UI_utils.h
(+2 files in other folders)
